15386: add owner, handle incorrect issue state
