# controllers.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"fmt"
 	"github.com/kataras/iris/v12"
 	"github.com/kataras/iris/v12/context"
 	"time"
@@ -11,29 +12,39 @@ var JSONOptions = iris.JSON{Secure: true}
 // listRepository godoc
 // @Summary Retrieves repository info based on given name
 // @Produce json
+// @Param owner path string true "Repository Owner"
 // @Param name path string true "Repository Name"
 // @Success 200 {string} ok
-// @Router /{name} [get]
+// @Router /{owner}/{name} [get]
 func listRepository(ctx iris.Context) {
 	repoName := ctx.Params().Get("name")
-	repository, err := getRepository(CLIENT, repoName)
+	owner := ctx.Params().Get("owner")
+	repository, err := getRepository(CLIENT, owner+"/"+repoName)
 	if err != nil {
 		ctx.JSON(context.Map{"repository": repository, "error": err.Error()}, JSONOptions)
 	} else {
 		ctx.JSON(context.Map{"repository": repository, "error": nil}, JSONOptions)
 	}
+	fmt.Println(repository)
 }
 
 // listIssues godoc
 // @Summary Retrieves issues on given repository name
 // @Produce json
+// @Param owner path string true "Repository Owner"
 // @Param name path string true "Repository Name"
 // @Param state query string false "Issue State" Enums(all, open, closed)
 // @Success 200 {string} ok
-// @Router /{name}/issues [get]
+// @Router /{owner}/{name}/issues [get]
 func listIssues(ctx iris.Context) {
 	repoName := ctx.Params().Get("name")
-	issues, err := getIssues(CLIENT, repoName, IssueFilter{State: getIssueState(ctx)})
+	owner := ctx.Params().Get("owner")
+	state, err := getIssueState(ctx)
+	if err != nil {
+		ctx.StopWithError(iris.StatusBadRequest, err)
+		return
+	}
+	issues, err := getIssues(CLIENT, owner+"/"+repoName, IssueFilter{State: state})
 	if err != nil {
 		ctx.JSON(context.Map{"issues": issues, "error": err.Error()}, JSONOptions)
 	} else {
@@ -44,14 +55,16 @@ func listIssues(ctx iris.Context) {
 // listCommits godoc
 // @Summary Retrieves commits based on given repository name
 // @Produce json
+// @Param owner path string true "Repository Owner"
 // @Param name path string true "Repository Name"
 // @Param author query string false "Commit Author: GitHub login or email address"
 // @Param since query string false "Since timestamp: 2020-05-25T06:34:16Z"
 // @Param until query string false "Since timestamp: 2020-05-25T06:34:16Z"
 // @Success 200 {string} ok
-// @Router /{name}/commits [get]
+// @Router /{owner}/{name}/commits [get]
 func listCommits(ctx iris.Context) {
 	repoName := ctx.Params().Get("name")
+	owner := ctx.Params().Get("owner")
 	sinceParam := ctx.URLParamDefault("since", "")
 	since, err := time.Parse(time.RFC3339, sinceParam)
 	if sinceParam != "" && err != nil {
@@ -64,7 +77,7 @@ func listCommits(ctx iris.Context) {
 		ctx.StopWithError(iris.StatusBadRequest, err)
 		return
 	}
-	commits, err := getCommits(CLIENT, repoName, CommitFilter{Author: getCommitAuthor(ctx),
+	commits, err := getCommits(CLIENT, owner+"/"+repoName, CommitFilter{Author: getCommitAuthor(ctx),
 		Since: since, Until: until})
 	if err != nil {
 		ctx.JSON(context.Map{"commits": commits, "error": err.Error()}, JSONOptions)
